--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "gmail-send": "^1.8.14",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.4"
   }
